@@ -27,19 +27,18 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.eclipse.tractusx.irs.edc.client.testutil.TestMother.createAndConstraintPolicy;
 import static org.eclipse.tractusx.irs.edc.client.testutil.TestMother.createAtomicConstraint;
 import static org.eclipse.tractusx.irs.edc.client.testutil.TestMother.createAtomicConstraintPolicy;
-import static org.eclipse.tractusx.irs.edc.client.testutil.TestMother.createOrConstraintPolicy;
 import static org.eclipse.tractusx.irs.edc.client.testutil.TestMother.createXOneConstraintPolicy;
 import static org.mockito.Mockito.when;
 
 import java.time.OffsetDateTime;
+import java.util.Collections;
 import java.util.List;
 
 import org.eclipse.edc.policy.model.Policy;
+import org.eclipse.tractusx.irs.edc.client.testutil.TestConstants;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.CsvSource;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
@@ -52,33 +51,19 @@ class PolicyCheckerServiceTest {
 
     @BeforeEach
     void setUp() {
-        final var policyList = List.of(new AcceptedPolicy("ID 3.0 Trace", OffsetDateTime.now().plusYears(1)),
-                new AcceptedPolicy("FrameworkAgreement.traceability", OffsetDateTime.now().plusYears(1)));
+        final var policyList = List.of(
+                new AcceptedPolicy(policy(TestConstants.ID_3_0_TRACE), OffsetDateTime.now().plusYears(1)),
+                new AcceptedPolicy(policy(TestConstants.FRAMEWORK_AGREEMENT_TRACEABILITY),
+                        OffsetDateTime.now().plusYears(1)));
         when(policyStore.getAcceptedPolicies()).thenReturn(policyList);
-        final List<String> leftOperands = List.of("PURPOSE");
-        final List<String> rightOperands = List.of("active");
-        policyCheckerService = new PolicyCheckerService(policyStore, rightOperands, leftOperands);
-    }
-
-    @ParameterizedTest
-    @CsvSource(value = { "PURPOSE,ID 3.0 Trace",
-                         "PURPOSE,ID%203.0%20Trace",
-                         "FrameworkAgreement.traceability,active"
-    }, delimiter = ',')
-    void shouldConfirmValidPolicy(final String leftExpr, final String rightExpr) {
-        // given
-        Policy policy = createAtomicConstraintPolicy(leftExpr, rightExpr);
-        // when
-        boolean result = policyCheckerService.isValid(policy);
-
-        // then
-        assertThat(result).isTrue();
+        policyCheckerService = new PolicyCheckerService(policyStore, new ConstraintCheckerService());
     }
 
     @Test
     void shouldRejectWrongPolicy() {
         // given
-        Policy policy = createAtomicConstraintPolicy("PURPOSE", "Wrong_Trace");
+        final String unknownRightExpression = "Wrong_Trace";
+        Policy policy = createAtomicConstraintPolicy(TestConstants.PURPOSE, unknownRightExpression);
         // when
         boolean result = policyCheckerService.isValid(policy);
 
@@ -89,7 +74,7 @@ class PolicyCheckerServiceTest {
     @Test
     void shouldRejectWhenPolicyStoreIsEmpty() {
         // given
-        Policy policy = createAtomicConstraintPolicy("PURPOSE", "ID 3.0 Trace");
+        Policy policy = createAtomicConstraintPolicy(TestConstants.PURPOSE, TestConstants.ID_3_0_TRACE);
         when(policyStore.getAcceptedPolicies()).thenReturn(List.of());
         // when
         boolean result = policyCheckerService.isValid(policy);
@@ -101,10 +86,13 @@ class PolicyCheckerServiceTest {
     @Test
     void shouldConfirmValidPolicyWhenWildcardIsSet() {
         // given
-        final var policyList = List.of(new AcceptedPolicy("ID 3.0 Trace", OffsetDateTime.now().plusYears(1)),
-                new AcceptedPolicy("*", OffsetDateTime.now().plusYears(1)));
+        final String wildcardPolicyId = "*";
+        final var policyList = List.of(
+                new AcceptedPolicy(policy(TestConstants.ID_3_0_TRACE), OffsetDateTime.now().plusYears(1)),
+                new AcceptedPolicy(policy(wildcardPolicyId), OffsetDateTime.now().plusYears(1)));
         when(policyStore.getAcceptedPolicies()).thenReturn(policyList);
-        Policy policy = createAtomicConstraintPolicy("FrameworkAgreement.traceability", "active");
+        Policy policy = createAtomicConstraintPolicy(TestConstants.FRAMEWORK_AGREEMENT_TRACEABILITY,
+                TestConstants.STATUS_ACTIVE);
         // when
         boolean result = policyCheckerService.isValid(policy);
 
@@ -115,78 +103,50 @@ class PolicyCheckerServiceTest {
     @Test
     void shouldRejectWhenWildcardIsPartOfPolicy() {
         // given
-        final var policyList = List.of(new AcceptedPolicy("Policy*", OffsetDateTime.now().plusYears(1)));
+        final String invalidWildcardPolicy = "Policy*";
+        final var policyList = List.of(
+                new AcceptedPolicy(policy(invalidWildcardPolicy), OffsetDateTime.now().plusYears(1)));
         when(policyStore.getAcceptedPolicies()).thenReturn(policyList);
-        Policy policy = createAtomicConstraintPolicy("FrameworkAgreement.traceability", "active");
+        Policy policy = createAtomicConstraintPolicy(TestConstants.FRAMEWORK_AGREEMENT_TRACEABILITY,
+                TestConstants.STATUS_ACTIVE);
         // when
         boolean result = policyCheckerService.isValid(policy);
 
         // then
         assertThat(result).isFalse();
-    }
-
-    @Test
-    void shouldValidateAndConstraints() {
-        // given
-        final var policyList = List.of(
-                new AcceptedPolicy("FrameworkAgreement.traceability", OffsetDateTime.now().plusYears(1)),
-                new AcceptedPolicy("Membership", OffsetDateTime.now().plusYears(1)),
-                new AcceptedPolicy("ID 3.1 Trace", OffsetDateTime.now().plusYears(1)));
-        when(policyStore.getAcceptedPolicies()).thenReturn(policyList);
-        Policy policy = createAndConstraintPolicy(
-                List.of(createAtomicConstraint("FrameworkAgreement.traceability", "active"),
-                        createAtomicConstraint("Membership", "active"),
-                        createAtomicConstraint("PURPOSE", "ID 3.1 Trace")));
-        // when
-        boolean result = policyCheckerService.isValid(policy);
-
-        // then
-        assertThat(result).isTrue();
     }
 
     @Test
     void shouldRejectAndConstraintsWhenOnlyOneMatch() {
         // given
-        final var policyList = List.of(
-                new AcceptedPolicy("FrameworkAgreement.traceability", OffsetDateTime.now().plusYears(1)),
-                new AcceptedPolicy("FrameworkAgreement.dismantler", OffsetDateTime.now().plusYears(1)));
+        final var policyList = List.of(new AcceptedPolicy(policy(TestConstants.FRAMEWORK_AGREEMENT_TRACEABILITY),
+                        OffsetDateTime.now().plusYears(1)),
+                new AcceptedPolicy(policy(TestConstants.FRAMEWORK_AGREEMENT_DISMANTLER),
+                        OffsetDateTime.now().plusYears(1)));
         when(policyStore.getAcceptedPolicies()).thenReturn(policyList);
         Policy policy = createAndConstraintPolicy(
-                List.of(createAtomicConstraint("FrameworkAgreement.traceability", "active"),
-                        createAtomicConstraint("Membership", "active")));
+                List.of(createAtomicConstraint(TestConstants.FRAMEWORK_AGREEMENT_TRACEABILITY,
+                                TestConstants.STATUS_ACTIVE),
+                        createAtomicConstraint(TestConstants.MEMBERSHIP, TestConstants.STATUS_ACTIVE)));
         // when
         boolean result = policyCheckerService.isValid(policy);
 
         // then
         assertThat(result).isFalse();
-    }
-
-    @Test
-    void shouldValidateOrConstraints() {
-        // given
-        final var policyList = List.of(
-                new AcceptedPolicy("FrameworkAgreement.traceability", OffsetDateTime.now().plusYears(1)),
-                new AcceptedPolicy("FrameworkAgreement.dismantler", OffsetDateTime.now().plusYears(1)));
-        when(policyStore.getAcceptedPolicies()).thenReturn(policyList);
-        Policy policy = createOrConstraintPolicy(
-                List.of(createAtomicConstraint("FrameworkAgreement.traceability", "active"),
-                        createAtomicConstraint("Membership", "active")));
-        // when
-        boolean result = policyCheckerService.isValid(policy);
-
-        // then
-        assertThat(result).isTrue();
     }
 
     @Test
     void shouldRejectOrConstraintsWhenNoneMatch() {
         // given
-        final var policyList = List.of(new AcceptedPolicy("FrameworkAgreement.test", OffsetDateTime.now().plusYears(1)),
-                new AcceptedPolicy("FrameworkAgreement.dismantler", OffsetDateTime.now().plusYears(1)));
+        final var policyList = List.of(
+                new AcceptedPolicy(policy(TestConstants.FRAMEWORK_AGREEMENT_TEST), OffsetDateTime.now().plusYears(1)),
+                new AcceptedPolicy(policy(TestConstants.FRAMEWORK_AGREEMENT_DISMANTLER),
+                        OffsetDateTime.now().plusYears(1)));
         when(policyStore.getAcceptedPolicies()).thenReturn(policyList);
         Policy policy = createAndConstraintPolicy(
-                List.of(createAtomicConstraint("FrameworkAgreement.traceability", "active"),
-                        createAtomicConstraint("Membership", "active")));
+                List.of(createAtomicConstraint(TestConstants.FRAMEWORK_AGREEMENT_TRACEABILITY,
+                                TestConstants.STATUS_ACTIVE),
+                        createAtomicConstraint(TestConstants.MEMBERSHIP, TestConstants.STATUS_ACTIVE)));
         // when
         boolean result = policyCheckerService.isValid(policy);
 
@@ -195,32 +155,17 @@ class PolicyCheckerServiceTest {
     }
 
     @Test
-    void shouldValidateXOneConstraints() {
-        // given
-        final var policyList = List.of(
-                new AcceptedPolicy("FrameworkAgreement.traceability", OffsetDateTime.now().plusYears(1)),
-                new AcceptedPolicy("FrameworkAgreement.dismantler", OffsetDateTime.now().plusYears(1)));
-        when(policyStore.getAcceptedPolicies()).thenReturn(policyList);
-
-        Policy policy = createXOneConstraintPolicy(
-                List.of(createAtomicConstraint("FrameworkAgreement.traceability", "active"),
-                        createAtomicConstraint("Membership", "active")));
-        // when
-        boolean result = policyCheckerService.isValid(policy);
-
-        // then
-        assertThat(result).isTrue();
-    }
-
-    @Test
     void shouldRejectXOneConstraintsWhenNoneMatch() {
         // given
-        final var policyList = List.of(new AcceptedPolicy("FrameworkAgreement.test", OffsetDateTime.now().plusYears(1)),
-                new AcceptedPolicy("FrameworkAgreement.dismantler", OffsetDateTime.now().plusYears(1)));
+        final var policyList = List.of(
+                new AcceptedPolicy(policy(TestConstants.FRAMEWORK_AGREEMENT_TEST), OffsetDateTime.now().plusYears(1)),
+                new AcceptedPolicy(policy(TestConstants.FRAMEWORK_AGREEMENT_DISMANTLER),
+                        OffsetDateTime.now().plusYears(1)));
         when(policyStore.getAcceptedPolicies()).thenReturn(policyList);
         Policy policy = createXOneConstraintPolicy(
-                List.of(createAtomicConstraint("FrameworkAgreement.traceability", "active"),
-                        createAtomicConstraint("Membership", "active")));
+                List.of(createAtomicConstraint(TestConstants.FRAMEWORK_AGREEMENT_TRACEABILITY,
+                                TestConstants.STATUS_ACTIVE),
+                        createAtomicConstraint(TestConstants.MEMBERSHIP, TestConstants.STATUS_ACTIVE)));
         // when
         boolean result = policyCheckerService.isValid(policy);
 
@@ -231,13 +176,14 @@ class PolicyCheckerServiceTest {
     @Test
     void shouldRejectXOneConstraintsWhenMoreThanOneMatch() {
         // given
-        final var policyList = List.of(
-                new AcceptedPolicy("FrameworkAgreement.traceability", OffsetDateTime.now().plusYears(1)),
-                new AcceptedPolicy("Membership", OffsetDateTime.now().plusYears(1)));
+        final var policyList = List.of(new AcceptedPolicy(policy(TestConstants.FRAMEWORK_AGREEMENT_TRACEABILITY),
+                        OffsetDateTime.now().plusYears(1)),
+                new AcceptedPolicy(policy(TestConstants.MEMBERSHIP), OffsetDateTime.now().plusYears(1)));
         when(policyStore.getAcceptedPolicies()).thenReturn(policyList);
         Policy policy = createXOneConstraintPolicy(
-                List.of(createAtomicConstraint("FrameworkAgreement.traceability", "active"),
-                        createAtomicConstraint("Membership", "active")));
+                List.of(createAtomicConstraint(TestConstants.FRAMEWORK_AGREEMENT_TRACEABILITY,
+                                TestConstants.STATUS_ACTIVE),
+                        createAtomicConstraint(TestConstants.MEMBERSHIP, TestConstants.STATUS_ACTIVE)));
         // when
         boolean result = policyCheckerService.isValid(policy);
 
@@ -245,25 +191,8 @@ class PolicyCheckerServiceTest {
         assertThat(result).isFalse();
     }
 
-    @Test
-    void shouldAcceptMultipleRightOperands() {
-        // given
-        final var policyList = List.of(
-                new AcceptedPolicy("FrameworkAgreement.traceability", OffsetDateTime.now().plusYears(1)),
-                new AcceptedPolicy("FrameworkAgreement.dismantler", OffsetDateTime.now().plusYears(1)),
-                new AcceptedPolicy("Membership", OffsetDateTime.now().plusYears(1)));
-        when(policyStore.getAcceptedPolicies()).thenReturn(policyList);
-        final PolicyCheckerService testee = new PolicyCheckerService(policyStore, List.of("active", "inactive"),
-                List.of());
-
-        Policy policy = createAndConstraintPolicy(
-                List.of(createAtomicConstraint("FrameworkAgreement.traceability", "active"),
-                        createAtomicConstraint("FrameworkAgreement.dismantler", "inactive"),
-                        createAtomicConstraint("Membership", "active")));
-        // when
-        boolean result = testee.isValid(policy);
-
-        // then
-        assertThat(result).isTrue();
+    private org.eclipse.tractusx.irs.edc.client.policy.Policy policy(String policyId) {
+        return new org.eclipse.tractusx.irs.edc.client.policy.Policy(policyId, OffsetDateTime.now(),
+                OffsetDateTime.now().plusYears(1), Collections.emptyList());
     }
 }
